--- a/action.yml
+++ b/action.yml
@@ -44,6 +44,10 @@ inputs:
     description: 'Version tag of openfga/cli to use'
     required: false
     default: latest
+  debug:
+    description: 'Enable debug logging in OpenFGA CLI'
+    required: false
+    default: 'false'
 
 outputs:
   authorization_model_id:
@@ -102,6 +106,11 @@ runs:
         if [ "${{ inputs.client-secret }}" ]
         then
           fga_deploy_params+=" --client-secret=${{ inputs.client-secret }}"
+        fi
+
+        if [ "${{ inputs.debug }}" == "true" ]
+        then
+          fga_deploy_params+=" --debug"
         fi
 
         if [ "${{ inputs.model-file-path }}" ]
